--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&family=Outfit:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
   
   <!-- Favicon -->
-  <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🧱</text></svg>">
+  <link rel="icon" type="image/x-icon" href="/favicon.ico">
   <link rel="apple-touch-icon" href="/icon-192.png">
   
   <!-- Styles (EXTRACTED) -->
@@ -45,7 +45,7 @@
   <!-- Navigation -->
   <nav>
     <a href="/" class="logo">
-      <div class="logo-icon">🧱</div>
+      <img src="/logo-icon.png" alt="ScoutLoot" class="logo-icon">
       <span>ScoutLoot</span>
     </a>
     
@@ -322,7 +322,7 @@
       <div class="footer-content">
         <div class="footer-brand">
           <a href="/" class="logo">
-            <div class="logo-icon">🧱</div>
+            <img src="/logo-icon.png" alt="ScoutLoot" class="logo-icon">
             <span>ScoutLoot</span>
           </a>
           <p>The smartest way to find LEGO deals. Never overpay again.</p>
@@ -1012,7 +1012,7 @@
     <div class="cookie-content">
       <p>
         🍪 We use cookies to improve your experience. By using ScoutLoot, you agree to our 
-        <a href="/privacy">Privacy Policy</a> and <a href="/terms">Terms of Service</a>.
+        <a href="/privacy">Privacy Policy</a> and <a href="/cookies">Cookie Policy</a>.
       </p>
       <button class="btn btn-primary btn-sm" onclick="acceptCookies()">Accept</button>
     </div>
