--- a/public/terms.html
+++ b/public/terms.html
@@ -7,7 +7,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&family=Outfit:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
-  <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🧱</text></svg>">
+  <link rel="icon" type="image/x-icon" href="/favicon.ico">
+  <link rel="apple-touch-icon" href="/icon-192.png">
   <style>
     :root {
       --bg-primary: #0A0A0F;
@@ -121,7 +122,7 @@
 <body>
   <nav>
     <a href="/" class="logo">
-      <div class="logo-icon">🧱</div>
+      <img src="/logo-icon.png" alt="ScoutLoot" class="logo-icon">
       <span>ScoutLoot</span>
     </a>
   </nav>
@@ -229,6 +230,7 @@
     <a href="/">Home</a>
     <a href="/privacy">Privacy Policy</a>
     <a href="/terms">Terms of Service</a>
+    <a href="/cookies">Cookie Policy</a>
     <p style="margin-top: 24px;">© 2026 ScoutLoot. Not affiliated with LEGO Group or eBay Inc.</p>
   </footer>
 </body>
