Remove BrickLink references, fix legal docs for current state
- Remove BrickLink from footer (pending BrickOwl approval first)
- Update terms.html: Add USA/Canada/UK regions, add push notifications
- Update faq.html: Remove BrickLink references, fix Free tier description
- Fix misleading 'daily email digest' (feature doesn't exist)

--- a/public/faq.html
+++ b/public/faq.html
@@ -190,7 +190,7 @@
       <button class="faq-question">What is ScoutLoot?</button>
       <div class="faq-answer">
         <div class="faq-answer-content">
-          ScoutLoot is a deal alert service for LEGO collectors. We monitor eBay listings across USA, Canada, UK, and EU marketplaces and compare prices to BrickLink market data. When prices drop below your target, we send instant Telegram or browser push alerts. More marketplaces coming soon!
+          ScoutLoot is a deal alert service for LEGO collectors. We monitor eBay listings across USA, Canada, UK, and EU marketplaces and find the best deals. When prices drop below your target, we send instant Telegram or browser push alerts. More marketplaces coming soon!
         </div>
       </div>
     </div>
@@ -224,7 +224,7 @@
       <button class="faq-question">Which marketplaces do you scan?</button>
       <div class="faq-answer">
         <div class="faq-answer-content">
-          We scan eBay marketplaces in your region — USA, Canada, UK, or Europe (Germany, France, Spain, Italy). We also use BrickLink price data as a reference so you can see how deals compare to market averages. More marketplaces (BrickOwl, Amazon, retailers) coming soon!
+          We scan eBay marketplaces in your region — USA, Canada, UK, or Europe (Germany, France, Spain, Italy). More marketplaces (BrickOwl, Amazon, retailers) coming soon!
         </div>
       </div>
     </div>
@@ -301,7 +301,7 @@
       <button class="faq-question">What's the difference between the plans?</button>
       <div class="faq-answer">
         <div class="faq-answer-content">
-          <strong>Free:</strong> Track 3 sets, daily email digest, basic filters<br><br>
+          <strong>Free:</strong> Track 3 sets, Telegram & push alerts, basic filters<br><br>
           <strong>Collector (€6.99/mo):</strong> 25 watches, instant Telegram & push alerts, advanced filters, 100 alerts/day<br><br>
           <strong>Dealer (€14.99/mo):</strong> 100 watches, highest priority scanning, 500 alerts/day
         </div>
@@ -365,7 +365,7 @@
     <a href="/privacy">Privacy Policy</a>
     <a href="/terms">Terms of Service</a>
     <a href="/cookies">Cookie Policy</a>
-    <p style="margin-top: 24px;">© 2026 ScoutLoot. Not affiliated with LEGO Group, eBay Inc, or BrickLink.</p>
+    <p style="margin-top: 24px;">© 2026 ScoutLoot. Not affiliated with LEGO Group, eBay Inc.</p>
   </footer>
   
   <script>
