--- a/public/terms.html
+++ b/public/terms.html
@@ -134,7 +134,7 @@
     <p>Welcome to ScoutLoot. By using our service, you agree to these terms. Please read them carefully.</p>
     
     <h2>1. Description of Service</h2>
-    <p>ScoutLoot is a price alert service that monitors publicly available LEGO listings on eBay marketplaces across Europe. When listings match your specified criteria (set number, price, condition, etc.), we send you notifications via Telegram.</p>
+    <p>ScoutLoot is a price alert service that monitors publicly available LEGO listings on eBay marketplaces in USA, Canada, UK, and Europe. When listings match your specified criteria (set number, price, condition, etc.), we send you notifications via Telegram and browser push.</p>
     
     <h2>2. Account Registration</h2>
     <p>To use ScoutLoot, you must:</p>
