V21: Add WebSite schema with SearchAction for sitelinks search box

--- a/public/index.html
+++ b/public/index.html
@@ -88,6 +88,10 @@
   
   <!-- Styles -->
   <link rel="stylesheet" href="/css/styles.css">
+  <!-- Structured Data - WebSite with SearchAction -->
+  <script type="application/ld+json">
+  {"@context":"https://schema.org","@type":"WebSite","name":"ScoutLoot","url":"https://scoutloot.com","potentialAction":{"@type":"SearchAction","target":"https://scoutloot.com/set/{search_term_string}","query-input":"required name=search_term_string"}}
+  </script>
 </head>
 <body>
   <div class="bg-pattern"></div>
